Updated 'our-staff.html' via CloudCannon

--- a/our-staff.html
+++ b/our-staff.html
@@ -3,3 +3,26 @@ title: Our Staff
 meta_title:
 description:
 ---
+
+<div class="wrapper-padding">
+    <div class="grid-container">
+        <div class="grid-x grid-margin-x">
+            
+            <div class="medium-7 large-7 cell">
+                <div class="editable">
+                	<p>A privately owned company, Alton Drilling provides quality professional service with a friendly business approach.</p>
+                	<p>Alton&rsquo;s main drilling focus is exploration, including diamond coring, open hole, percussion drilling, coal and mineral exploration, reverse circulation (RC) and aircore drilling. The company also has worked on various seismic, geotechnical and instrumental jobs, drilling all types of ground conditions in all types of locations.</p>
+                	<p>Using the latest drilling equipment and technology combined with a wide range of experience spanning many years, Alton Drilling is able to lend specialist expertise to projects around the country. Continual research into new drilling rigs and equipment keeps Alton Drilling at the forefront of drilling in New Zealand and global.</p>
+                	<p>We specialize in heli-portable remote camp services, and also communication hubs.</p>
+                	<p>We currently hold the biggest fleet of SC11 rigs globally.</p>
+                	<p>Alton Drilling is currently running 10+ underground rigs including a MDR150 mobile unit</p>
+                	<p>Alton Drilling is also very involved in the manufacturing and design of exploration drilling rigs. The ADL Series rigs are working all around the world including Australasia, Asia and Europe.</p>
+                	<p>The rigs can be mounted on rubber or steel tracks, or for drill sites in remote or steep locations, the rigs can be built to be heli-portable and can be broken down into flyable components.</p>
+                	<p>Alton Drilling also offers a design service and is able to build &lsquo;one-off&rsquo; machines, purpose-built for the client&rsquo;s requirements.</p>
+                	<p>Specialisation, experience and innovation have combined to make Alton Drilling Ltd your Guaranteed Complete Drilling Service Provider.</p>
+                </div>
+            </div>
+        
+        </div>
+    </div>
+</div>
