Updated 'our-staff.html' via CloudCannon

--- a/our-staff.html
+++ b/our-staff.html
@@ -22,7 +22,7 @@ description:
                 {{ person content }}
             </div>
             
-            <div class="mcell">
+            <div class="cell">
                 <hr />
             </div>
             
