Updated 'our-staff.html' via CloudCannon

--- a/our-staff.html
+++ b/our-staff.html
@@ -23,7 +23,9 @@ description:
             </div>
             
             <div class="cell">
+                {% unless forloop.last %}
                 <hr />
+                {% endunless %}
             </div>
             
             {% endfor %}
