Updated 'our-staff.html' via CloudCannon

--- a/our-staff.html
+++ b/our-staff.html
@@ -22,9 +22,9 @@ description:
                 {{ person content }}
             </div>
             
-            <div class="cell">
+            <div class="cell text-center">
                 {% unless forloop.last %}
-                <hr />
+                <hr style="max-width: 400px;"/>
                 {% endunless %}
             </div>
             
