Updated 'our-staff.html' via CloudCannon

--- a/our-staff.html
+++ b/our-staff.html
@@ -4,6 +4,8 @@ meta_title:
 description:
 ---
 
+{% include heading.html %}
+
 <div class="wrapper-padding">
     <div class="grid-container">
         <div class="grid-x grid-margin-x">
