Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@ description:
             
             <div class="large-8 cell">
                 <div class="editable lead">
-            	    <h2>Footprints Preschool</h2>
-            	    <p>We offer a comprehensive Drilling Contracting Service with the ability to provide experienced staff, purpose-built rigs, custom built camp and rig huts, helicopter support, and management of Health, Safety &amp; Environmental risks.</p>
-            	    <p>We can keep downtime to a minimum with regular maintenance programes, a wide range of spares in stock, and thorough knowledge of our equipment.</p>
+                	<h2>Footprints Preschool</h2>
+                	<p>Footprints Preschool is located near the town centre of Waihi. We have a large outdoor natural environment including a sandpit, barkpit, mudpit a stream and a plum tree. The under two&rsquo;s area has a large natural grassed area with a sandpit and plenty of room for the infants and toddlers to explore and develop. We have vegetable gardens that the children are free to access at any time. The centre also has a resident turtle and fish in the under two&rsquo;s room. The environment is well resourced with plenty of loose parts so that children can direct their play and lead their own learning.&nbsp;</p>
                 </div>
                 <p><a class="editable button" href="/about/">More About Us</a></p>
             </div>
