--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@ heading: About Us
             
             <div class="medium-4 large-4 cell">
                <p>
-                   <img class="editable" src="" />
+                   <img class="editable" src="https://via.placeholder.com/600x600.jpg" />
                </p>
             </div>
             
