--- a/whanau.html
+++ b/whanau.html
@@ -10,7 +10,9 @@ description:
     <div class="grid-container padding-bottom">
         <div class="grid-x grid-margin-x">
             
-            {% include heading.html %}
+            <div class="large-offset-2 large-8 cell">
+                {% include heading.html %}
+            </div>
             
             <div class="large-offset-2 large-8 cell">
                 <div class="editable">
