--- a/fees.html
+++ b/fees.html
@@ -9,7 +9,9 @@ heading: Centre Fees
     <div class="grid-container padding-bottom">
         <div class="grid-x grid-margin-x">
             
-            {% include heading.html %}
+            <div class="large-offset-2 large-8 cell">
+                {% include heading.html %}
+            </div>
             
             <div class="large-offset-2 large-8 cell">
                 <div class="editable">
