Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@ description:
      <div class="grid-container">
         <div class="grid-x grid-margin-x">
             
-            {% include heading.html %}
+            <div class="cell">
+                {% include heading.html %}
+            </div>
             
             <div class="large-8 cell">
                 <div class="editable lead">
