--- a/404.html
+++ b/404.html
@@ -10,7 +10,9 @@ hero_image:
     <div class="grid-container">
         <div class="grid-x grid-margin-x">
             
-            {% include heading.html %}
+            <div class="cell">
+                {% include heading.html %}
+            </div>
         
             <div class="cell">
                 <div class="editable"><h4>Sorry, that page can't be found...</h4></div>
