Updated 'about.html' via CloudCannon

--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@ heading: About Us
             
             <div class="medium-4 large-offset-1 large-4 cell">
                 {% if person.image %}
-                    <p><img src="{{ site.baseurl }}{{ person.image }}" alt="{{ person.name }}" /></p>
+                    <p style="margin-right: 10px;"><img src="{{ site.baseurl }}{{ person.image }}" alt="{{ person.name }}" /></p>
                 {% endif %}
             </div>
             
