Updated 'contact.html' via CloudCannon

--- a/contact.html
+++ b/contact.html
@@ -73,4 +73,4 @@ hero_image: /uploads/hero-images/hero-contact.jpg
     </div>
 </div>
 
-{% include google-map.html %}
+<!-- (% include google-map.html %) -->
