Updated 'about.html' via CloudCannon

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@ title: About
 meta_title:
 description:
 heading: About Us
-hero_image:
+hero_image: /uploads/slider/slider-1.jpg
 ---
 
 <div class="wrapper-padding">
