Updated 'whanau.html' via CloudCannon

--- a/whanau.html
+++ b/whanau.html
@@ -2,10 +2,8 @@
 title: Whanau
 meta_title:
 description:
-hero_image:
+hero_image: /uploads/slider/slider-2.jpg
 ---
-
-
 
 <div class="wrapper-padding">
     <div class="grid-container padding-bottom">
