Updated 'fees.html' via CloudCannon

--- a/fees.html
+++ b/fees.html
@@ -3,7 +3,7 @@ title: Fees
 meta_title:
 description:
 heading: Centre Fees
-hero_image:
+hero_image: /uploads/slider/slider-3.jpg
 ---
 
 <div class="wrapper-padding">
