--- a/the-journey.html
+++ b/the-journey.html
@@ -1,5 +1,8 @@
 ---
 title: The Journey
+description:
+heading: About Us
+hero_image: /uploads/hero/hero-kids-pirates.jpg
 ---
 
 <div class="wrapper-padding">
