--- a/nature.html
+++ b/nature.html
@@ -1,5 +1,8 @@
 ---
 title: Nature Programme
+meta_title:
+description:
+hero_image: /uploads/hero/hero-kids-swing.jpg
 ---
 
 <div class="wrapper-padding">
