--- a/contact-success.html
+++ b/contact-success.html
@@ -15,7 +15,7 @@ sitemap_exclude: true
         
             <div class="cell">
                 <p class="lead editable">Thank you for your enquiry - the form has been sent.</p>
-                <p class="editable">We will get back to you as soon as possible.<br /><strong>Alton Drilling Ltd.</strong></p>
+                <p class="editable">We will get back to you as soon as possible.<br /><strong>Footprints Preschool.</strong></p>
                 <br />
             </div>
     
