Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ description:
     
 </section>
 
-<section class="wrapper-padding" style="background: #333;">
+<section class="wrapper-padding">
      
      <div class="grid-container">
         <div class="grid-x grid-margin-x">
