Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ description:
      <div class="grid-container">
         <div class="grid-x grid-margin-x" style="position: relative;">
             
-            <img src="{{ site.baseurl }}/images/blue-hat-boy-cutout.png" style="position: absolute; left: -200px bottom: -50px; z-index: 10000;" />
+            <img src="{{ site.baseurl }}/images/blue-hat-boy-cutout.png" style="position: absolute; left: -200px; bottom: -40px; z-index: 10000;" />
             
             <div class="large-offset-4 large-8 cell">
                 <div class="editable lead">
