--- a/contact.html
+++ b/contact.html
@@ -68,9 +68,7 @@ hero_image: /uploads/hero/hero-pirates-contact.jpg
                     <p><i class="fas fa-phone"></i>&nbsp; {{ contact.phone }}</p>
                 {% endif %}
                     
-                {% if contact.email %}
-                    <p><a href="mailto:{{ contact.email }}"><i class="fas fa-paper-plane"></i>&nbsp; {{ contact.email }}</a></p>
-                {% endif %}
+                <p><a class="editable" href="mailto:{{ contact.email }}"><i class="fas fa-paper-plane"></i>&nbsp; {{ contact.email }}</a></p>
                 
                 {% if contact.facebook_url %}
                     <p><a href="{{ activity.facebook_url }}"><i class="fab fa-facebook-square"></i></a></p>
