Updated 'contact.html' via CloudCannon

--- a/contact.html
+++ b/contact.html
@@ -69,7 +69,7 @@ hero_image: /uploads/hero/hero-pirates-contact.jpg
                 {% endif %}
                 
                 {% if contact.facebook_url %}
-                    <p><a href="{{ contact.facebook_url }}"><i class="fab fa-facebook-square"></i></a></p>
+                    <h3><a href="{{ contact.facebook_url }}"><i class="fab fa-facebook-square"></i></a></h3>
                 {% endif %}
                    
             </div>
