Updated 'nature.html' via CloudCannon

--- a/nature.html
+++ b/nature.html
@@ -3,6 +3,9 @@ title: Nature Programme
 meta_title:
 description:
 hero_image: /uploads/hero/hero-tree-climbing.jpg
+photos:
+  - gallery_image:
+    title:
 ---
 
 {% include heading.html %}
