Updated 'the-journey.html' via CloudCannon

--- a/the-journey.html
+++ b/the-journey.html
@@ -14,10 +14,13 @@ hero_image: /uploads/hero/kids-beach-hands-raised.jpg
             <div class="large-offset-2 large-8 cell">
                 <div class="editable">
                 	<h2>The Soul Room</h2>
-                	<p>&nbsp;</p>
                 	<h2>Explorers</h2>
-                	<p>&nbsp;</p>
                 	<h2>Transition to School</h2>
+                	<p>Starting the transition to school is a process that is carried out in partnership between the parent and teacher.&nbsp;</p>
+                	<p>This process normally starts a year before the child is ready to start school. At this time teachers will start to make links between the child&rsquo;s learning at the centre and school.&nbsp;</p>
+                	<p>To support this process children are exposed to a wide range of experiences at the centre, which include frequent outings in the centre van. Examples of these include visits to local business and outings into the natural environment, such as Waihi Beach, nearby parks, walking tracks and streams.&nbsp;</p>
+                	<p>Teachers will also accompany children on school visits and then develop a school readiness booklet to give to the child&rsquo;s new entrant teacher that demonstrates the child&rsquo;s school readiness.&nbsp;</p>
+                	<p>We are advocates for children staying at the centre until they turn 6 years of age.</p>
                 </div>
             </div>
         
