Updated 2 files via CloudCannon

--- a/about.html
+++ b/about.html
@@ -20,9 +20,9 @@ hero_image: /uploads/hero/hero-kids-pirates.jpg
             <div class="medium-8 large-offset-1 large-6 cell">
                 <div class="editable">
                 	<h2>Lorem Ipsum</h2>
-                	<h2><<< Big version of logo and text >>></h2>
+                	<h2>&lt;&lt;&lt; Big version of logo and text &gt;&gt;&gt;</h2>
                 	<p>Footprints Preschool is owned and operated by Phil and Pauline Davison. The centre was purpose built in 2009 and has consistently maintained a high standard of care and education for all children.</p>
-                	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure.</p>
+                	<p><img src="/uploads/content-images/pauline-phil-davison.jpg" /></p>
                 </div>
             </div>
             
