--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@ hero_image: /uploads/hero/hero-kids-pirates.jpg
             
             <div class="large-offset-1 large-10 cell">
                 <div class="editable">
-                	<p>Footprints Preschool is owned and operated by Phil and Pauline Davison. The centre was purpose built in 2009 and has consistently maintained a high standard of care and education for all children.</p>
+                	<p class="lead">Footprints Preschool is owned and operated by Phil and Pauline Davison. The centre was purpose built in 2009 and has consistently maintained a high standard of care and education for all children.</p>
                 	<p><img src="/uploads/content-images/pauline-phil-davison-1000.jpg" /></p>
                 </div>
             </div>
