--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@ hero_image: /uploads/hero/hero-kids-pirates.jpg
         
         <div class="grid-x grid-margin-x">
             
-            <div class="large-offset-1 large-10 text-center cell">
+            <div class="large-offset-1 large-10 cell">
                 <div class="editable">
                     <h2>Learning impressions, lasting for life</h2>
                     <p>&nbsp;</p>
