Updated 'about.html' via CloudCannon

--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@ hero_image: /uploads/hero/hero-kids-pirates.jpg
             <div class="medium-8 large-offset-1 large-6 cell">
                 <div class="editable">
                 
-                	<p>Our logo was carefully designed to reflect and represent the centre beliefs.&nbsp;</p>
+                	<p class="lead">Our logo was carefully designed to reflect and represent our beliefs.&nbsp;</p>
                 	<ul>
                 		<li><strong>Green </strong>represents our connection with the ngahere or bush.</li>
                 		<li><strong>Blue</strong>&nbsp;represents wai or water.&nbsp;</li>
