--- a/about.html
+++ b/about.html
@@ -23,15 +23,15 @@ hero_image: /uploads/hero/hero-kids-pirates.jpg
             <div class="medium-8 large-offset-1 large-6 cell">
                 <div class="editable">
                 
-                	<p class="lead">Our logo was carefully designed to reflect and represent our beliefs.&nbsp;</p>
+                	<p class="lead">Our logo was carefully designed to reflect and represent our beliefs.</p>
                 	<ul>
-                		<li><strong>Green </strong>represents our connection with the ngahere or bush.</li>
-                		<li><strong>Blue</strong>&nbsp;represents wai or water.&nbsp;</li>
-                		<li><strong>Brown</strong>&nbsp;represent the earth or whenua.</li>
+                		<li><strong>Green</strong> represents our connection with the ngahere or bush.</li>
+                		<li><strong>Blue</strong> represents wai or water.</li>
+                		<li><strong>Brown</strong> represent the earth or whenua.</li>
                 	</ul>
-                	<p>All three elements are to be viewed as one - neither can survive without the other. These three elements are central to the learning that children are exposed to at our centre.&nbsp;</p>
-                	<p>The two footprints are positioned in the shape of a heart. It represents our belief that the child is at the heart of everything that we do.&nbsp;</p>
-                	<p><strong><em>&ldquo;Learning impressions, lasting for life&rdquo;&nbsp;</em> </strong>is the core belief that the learning and experiences that the children acquire at Footprints Preschool, will benefit them for the rest of their lives.<br />&nbsp;</p>
+                	<p>All three elements are to be viewed as one - neither can survive without the other. These three elements are central to the learning that children are exposed to at our centre.</p>
+                	<p>The two footprints are positioned in the shape of a heart. It represents our belief that the child is at the heart of everything that we do.</p>
+                	<p><strong><em>&ldquo;Learning impressions, lasting for life&rdquo;&nbsp;</em> </strong>is the core belief that the learning and experiences that the children acquire at Footprints Preschool, will benefit them for the rest of their lives.</p>
                 </div>
             </div>
             
