Updated 'nature.html' via CloudCannon

--- a/nature.html
+++ b/nature.html
@@ -19,8 +19,9 @@ photos:
             <div class="large-offset-2 large-8 cell">
                 
                 <div class="editable">
-                	<p>Footprints Preschool have a strong connection with the surrounding natural environment.</p>
-                	<p>Each week we take a group of children on outings into different environments in our community. One day we could be at the beach, the next day in the bush. By doing this we are developing exploration, problem-solving, the ability to respond to changing contexts, imagination, risk management, improving child physical and mental health and well-being, sustainability and learning about how to care for our wonderful environment. The important part of this programme is that it allows children long periods of play so that they are able to develop their own knowledge and understanding.&nbsp;<br />&nbsp;</p>
+                	<p class="lead">Footprints Preschool have a strong connection with the surrounding natural environment.</p>
+                	<p>Each week we take a group of children on outings into different environments in our community. One day we could be at the beach, the next day in the bush. By doing this we are developing exploration, problem-solving, the ability to respond to changing contexts, imagination, risk management, improving child physical and mental health and well-being, sustainability and learning about how to care for our wonderful environment.</p>
+                	<p>The important part of this programme is that it allows children long periods of play so that they are able to develop their own knowledge and understanding.</p>
                 </div>
                 
                 {% if page.photos[0].gallery_image %}
