Updated 'fees.html' via CloudCannon

--- a/fees.html
+++ b/fees.html
@@ -14,7 +14,7 @@ hero_image: /uploads/hero/hero-jenga-blocks.jpg
             
             <div class="large-offset-2 large-8 cell">
                 <div class="editable">
-                	<p>All children (ages 0-5) receive <strong>30 free hours</strong> of care (so no cost to you).</p>
+                	<p class="lead">All children (ages 0-5) receive <strong>30 free hours</strong> of care (so no cost to you).</p>
                 	<h3>Extra Hours</h3>
                 	<p>If a child does more than 6 hours per day at the centre then the hourly rate of $5.00 applies. Extra hours over the child&rsquo;s booked times will also incur the $5.00 per hour charge.</p>
                 	<h3>WINZ Subsidy</h3>
