Updated 'nature.html' via CloudCannon

--- a/nature.html
+++ b/nature.html
@@ -4,9 +4,7 @@ meta_title:
 description:
 hero_image: /uploads/hero/hero-tree-climbing.jpg
 photos:
-  - gallery_image: /uploads/hero/hero-jenga-blocks.jpg
-    title:
-  - gallery_image: /uploads/slider/slider-beach-pirates.jpg
+  - gallery_image:
     title:
 ---
 
