Updated 'about.html' via CloudCannon

--- a/about.html
+++ b/about.html
@@ -103,6 +103,8 @@ hero_image: /uploads/hero/hero-kids-pirates.jpg
     </div>
 </div>
 
+<a id="philosophy"></a>
+
 <div class="wrapper-padding" style="background: #efefef;">
     <div class="grid-container padding-bottom">
         <div class="grid-x grid-margin-x">
