Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ description:
             <div class="large-8 cell">
                 <div style="padding: 40px 40px 30px 40px; background: rgba(255,255,255,0.7); margin: 30px 0 40px 0;">
                     <div class="editable lead">
-                        <h2>Closest Preschool to Town Centre</h2>
+                        <h2>Closest Preschool to Waihi Town Centre</h2>
                     	<p>Footprints Preschool is located near the town centre of Waihi. We have a large outdoor natural environment including a sandpit, barkpit, mudpit a stream and a plum tree. The under two&rsquo;s area has a large natural grassed area with a sandpit and plenty of room for the infants and toddlers to explore and develop.</p>
                     	<p>We have vegetable gardens that the children are free to access at any time. The centre also has a resident turtle and fish in the under two&rsquo;s room. The environment is well resourced with plenty of loose parts so that children can direct their play and lead their own learning.</p>
                     </div>
