--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ description:
             <div class="large-offset-4 large-8 cell">
                 <div class="editable lead">
                     <h2>Our Philosophy</h2>
-                	<p>Footprints Preschool is located near the town centre of Waihi. We have a large outdoor natural environment including a sandpit, barkpit, mudpit a stream and a plum tree. The under two&rsquo;s area has a large natural grassed area with a sandpit and plenty of room for the infants and toddlers to explore and develop. We have vegetable gardens that the children are free to access at any time. The centre also has a resident turtle and fish in the under two&rsquo;s room. The environment is well resourced with plenty of loose parts so that children can direct their play and lead their own learning.</p>
+                	<p>“Learning impressions, lasting for life” is the core belief that the learning and experiences that the children acquire at Footprints Preschool, will benefit them for the rest of their lives.</p>
                 </div>
                 <p><a class="editable button" href="/about#philosophy">More</a></p>
             </div>
