Updated 'the-journey.html' via CloudCannon

--- a/the-journey.html
+++ b/the-journey.html
@@ -14,7 +14,8 @@ hero_image: /uploads/hero/kids-beach-hands-raised.jpg
             <div class="large-offset-2 large-8 cell">
                 <div class="editable">
                 	<h2>The Soul Room - Infants and Toddlers</h2>
-                	<p><strong>The relationship is all.</strong> Developing a relationship with children and families that is real and genuine comes before everything else.</p>
+                	<p><strong>The relationship is all.</strong></p>
+                	<p>Developing a relationship with children and families that is real and genuine comes before everything else.</p>
                 	<p>The Soul Room is a calm and nurturing environment, supported by teachers who are unhurried in their teaching practices. Children are free to explore the environment; both inside and outside.&nbsp;</p>
                 	<p>Children will enjoy long periods of uninterrupted play. The teacher&rsquo;s role in this very important process is to observe and only step in when required to do so.</p>
                 	<p>All practices in the Soul Room are guided by the Pikler Principles. Everything that happens in this room is centred around the needs of the child. Important care moments such as feeding, nappy changing and sleeping are based on the individual requirements of the child.&nbsp;</p>
@@ -24,7 +25,8 @@ hero_image: /uploads/hero/kids-beach-hands-raised.jpg
                 	<p><strong>Primary Care</strong><br />Each child has a Primary Caregiver, who is responsible for the child&rsquo;s daily needs and communicating with parents.</p>
                 	<p><strong>Transitions</strong><br />Transitioning into the over two&rsquo;s are is a process that is developed in partnership between family and teachers. The decision to transition the child is based on several factors, such as the ability to manage self, communication, physical and social competency.&nbsp;</p>
                 	<h2>Explorers</h2>
-                	<p>At Footprints we are passionate about exploring nature and our wider community and what it has to offer our children. At the centre we conduct weekly trips for our older children so that they have the opportunity to have real life experiences. No two days are the same &ndash;one day we could be making biscuits in a caf&eacute;, the next day we could be walking along the track to Cathedral Cove in Ha Hei or spending the day at the beach or bush. The Explorers programme allows children to take responsibility and direction for their own learning and apply knowledge that they have gained from the centre in a different context. Our 12 seater centre van provides us with flexibility to travel further abroad and provide children with a wider range of learning opportunities.</p>
+                	<p>At Footprints we are passionate about exploring nature and our wider community and what it has to offer our children. At the centre we conduct weekly trips for our older children so that they have the opportunity to have real life experiences. No two days are the same &ndash;one day we could be making biscuits in a caf&eacute;, the next day we could be walking along the track to Cathedral Cove in Ha Hei or spending the day at the beach or bush.</p>
+                	<p>The Explorers programme allows children to take responsibility and direction for their own learning and apply knowledge that they have gained from the centre in a different context. Our 12 seater centre van provides us with flexibility to travel further abroad and provide children with a wider range of learning opportunities.</p>
                 	<h2>Transition to School</h2>
                 	<p>Starting the transition to school is a process that is carried out in partnership between the parent and teacher.&nbsp;</p>
                 	<p>This process normally starts a year before the child is ready to start school. At this time teachers will start to make links between the child&rsquo;s learning at the centre and school.&nbsp;</p>
