Updated 'about.html' via CloudCannon

--- a/about.html
+++ b/about.html
@@ -105,7 +105,7 @@ hero_image: /uploads/hero/hero-kids-pirates.jpg
 
 <a id="philosophy"></a>
 
-<div class="wrapper-padding" style="background: #efefef;">
+<div class="wrapper-padding philosophy">
     <div class="grid-container padding-bottom">
         <div class="grid-x grid-margin-x">
             
