Updated 'about.html' via CloudCannon

--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@ hero_image: /uploads/hero/hero-kids-pirates.jpg
 
 {% include heading.html %}
 
-<div class="wrapper-padding">
+<div class="wrapper-padding padding-top-medium padding-bottom-medium">
     <div class="grid-container">
         
         <div class="grid-x grid-margin-x">
@@ -105,7 +105,7 @@ hero_image: /uploads/hero/hero-kids-pirates.jpg
 
 <a id="philosophy"></a>
 
-<div class="wrapper-padding philosophy">
+<div class="philosophy wrapper-padding padding-top-medium padding-bottom-medium">
     <div class="grid-container padding-bottom">
         <div class="grid-x grid-margin-x">
             
