Updated '404.html' via CloudCannon

--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@ heading: Oops...
 hero_image:
 ---
 
-<div class="wrapper-padding">
+<div class="wrapper-padding padding-top-medium padding-bottom-medium">
     <div class="grid-container">
         <div class="grid-x grid-margin-x">
             
