--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ description:
 
 {% include heading.html %}
 
-<div class="blurb wrapper-padding padding-top-medium padding-bottom-medium">
+<div class="blurb wrapper-padding padding-top-medium padding-bottom-large">
      
      <div class="grid-container">
         <div class="grid-x grid-margin-x">
