Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ description:
      <div class="grid-container">
         <div class="grid-x grid-margin-x" style="position: relative;">
             
-            <img src="{{ site.baseurl }}/images/blue-hat-boy-cutout.png" style="position: absolute; left: -200px; bottom: -70px; z-index: 999; max-width: 450px;" />
+            <img class="boy" src="{{ site.baseurl }}/images/blue-hat-boy-cutout.png"/>
             
             <div class="large-offset-4 large-8 cell">
                 <div class="editable lead">
