Updated 'about.html' via CloudCannon

--- a/about.html
+++ b/about.html
@@ -105,7 +105,7 @@ hero_image: /uploads/hero/hero-kids-pirates.jpg
 
 <a id="philosophy"></a>
 
-<div class="philosophy wrapper-padding padding-top-large padding-bottom-medium">
+<div class="philosophy wrapper-padding padding-top-xlarge padding-bottom-medium">
     <div class="grid-container padding-bottom">
         <div class="grid-x grid-margin-x">
             
