--- a/about.html
+++ b/about.html
@@ -109,7 +109,7 @@ hero_image: /uploads/hero/hero-kids-pirates.jpg
     <div class="grid-container padding-bottom">
         <div class="grid-x grid-margin-x">
             
-            <div class="large-6 cell">
+            <div class="large-6 cell padding-bottom-medium">
                 <div class="editable">
                 	<h2>Our Philosophy</h2>
                 	<p class="lead">Our philosophy is the foundation for everything that we do at Footprints Preschool. It is what guides our daily practice.</p>
@@ -119,7 +119,7 @@ hero_image: /uploads/hero/hero-kids-pirates.jpg
                 </div>
             </div>
             
-            <div class="large-offset-1 large-5 cell">
+            <div class="large-offset-1 large-5 cell padding-bottom-medium">
                 <div class="editable">
                 </div>
             </div>
