Updated 2 files via CloudCannon

--- a/about.html
+++ b/about.html
@@ -121,6 +121,7 @@ hero_image: /uploads/hero/hero-kids-pirates.jpg
             
             <div class="large-offset-1 large-5 cell">
                 <div class="editable padding-bottom-medium">
+                	<p><img src="/uploads/content/girls-sharing.jpg" /></p>
                 </div>
             </div>
             
