Updated 2 files via CloudCannon

--- a/about.html
+++ b/about.html
@@ -132,6 +132,7 @@ hero_image: /uploads/hero/hero-kids-pirates.jpg
             
             <div class="large-5 cell">
                 <div class="editable">
+                	<p><img src="/uploads/content/boys-sharing.jpg" /></p>
                 </div>
             </div>
             
