Updated 'contact.html' via CloudCannon

--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@ hero_image: /uploads/hero/hero-pirates-contact.jpg
 
 {% include heading.html %}
 
-<div class="wrapper-padding">
+<div class="wrapper-padding padding-top-medium padding-bottom-medium">
     <div class="grid-container">
         <div class="grid-x grid-margin-x">
         
