--- a/fees.html
+++ b/fees.html
@@ -8,8 +8,8 @@ hero_image: /uploads/hero/hero-jenga-blocks.jpg
 
 {% include heading.html %}
 
-<div class="wrapper-padding">
-    <div class="grid-container padding-bottom">
+<div class="wrapper-padding padding-top-medium padding-bottom-medium">
+    <div class="grid-container">
         <div class="grid-x grid-margin-x">
             
             <div class="large-offset-2 large-8 cell">
