--- a/help.html
+++ b/help.html
@@ -9,7 +9,7 @@ sitemap_exclude: true
 
 {% include heading.html %}
 
-<div class="wrapper-padding">
+<div class="wrapper-padding padding-top-medium padding-bottom-medium">
     <div class="grid-container">
         <div class="grid-x grid-margin-x">
         
