--- a/nature.html
+++ b/nature.html
@@ -24,8 +24,8 @@ photos:
 
 {% include heading.html %}
 
-<div class="wrapper-padding">
-    <div class="grid-container padding-bottom">
+<div class="wrapper-padding padding-top-medium padding-bottom-medium">
+    <div class="grid-container">
         <div class="grid-x grid-margin-x">
             
             <div class="large-offset-2 large-8 cell">
