--- a/whanau.html
+++ b/whanau.html
@@ -7,8 +7,8 @@ hero_image: /uploads/hero/hero-kids-swing.jpg
 
 {% include heading.html %}
 
-<div class="wrapper-padding">
-    <div class="grid-container padding-bottom">
+<div class="wrapper-padding padding-top-medium padding-bottom-medium">
+    <div class="grid-container">
         <div class="grid-x grid-margin-x">
             
             <div class="large-offset-2 large-8 cell">
