Updated 'contact.html' via CloudCannon

--- a/contact.html
+++ b/contact.html
@@ -22,19 +22,19 @@ hero_image: /uploads/hero/hero-pirates-contact.jpg
                         
                         <div class="cell">
                             <label>Your name (required)</label>
-                            <input required type="text" name="Name" placeholder="name..." />
+                            <input required type="text" name="Name" />
                         </div>
                         <div class="cell">
                             <label>Your email (required)</label>
-                            <input required type="text" name="Email" placeholder="email..." />
+                            <input required type="text" name="Email" />
                         </div>
                         <div class="cell">
                             <label>Phone</label>
-                            <input type="text" name="Phone" placeholder="phone..." />
+                            <input type="text" name="Phone" />
                         </div>
                         <div class="cell">
                             <label>Message (required)</label>
-                            <textarea name="Message" placeholder="message..."></textarea>
+                            <textarea name="Message"></textarea>
                         </div>
                        
                         <div class="cell">
