Updated 'whanau.html' via CloudCannon

--- a/whanau.html
+++ b/whanau.html
@@ -28,7 +28,7 @@ hero_image: /uploads/hero/hero-kids-swing.jpg
                 	<p>Parent&rsquo;s supply food for the child&rsquo;s morning tea, lunch time and afternoon tea. We encourage parents to supply a balanced and healthy lunchbox. If children want to bring their own water bottle then this is fine. Children have access at all times to water.</p>
                 	<h3>Clothing</h3>
                 	<p>Children will need sufficient clothing to last for the day. Children will typically encounter various types&rsquo; of activities, including water, mud and paint play. Parents will need to supply at least two full changes of clothing in a named bag (If a child is toilet training they may require more). All clothing needs to be named. A named sunhat needs to be supplied during the summer months. In the hotter months we ask that parents please sunblock their child before arriving at the centre.</p>
-                	<h3>Birthdays&nbsp;</h3>
+                	<h3>Birthdays</h3>
                 	<p>Children and parents are welcomed to celebrate birthday at the centre. If parents wish to supply a cake or other food for their child&rsquo;s special day, then they are more than welcomed to do so.</p>
                 	<h3>Soul Room &ndash; The Infants and Toddlers Room</h3>
                 	<p>The relationship is everything. The Pikler Approach underpins everything we do in the Soul room - and the centre. Infants and toddlers are nurtured by highly experienced and knowledgeable teachers, who are unhurried and responsive to the needs and cues of the child.</p>
