Updated 'whanau.html' via CloudCannon

--- a/whanau.html
+++ b/whanau.html
@@ -13,7 +13,7 @@ hero_image: /uploads/hero/hero-kids-swing.jpg
             
             <div class="large-offset-2 large-8 cell">
                 <div class="editable">
-                	<blockquote><p><strong><em>&ldquo;It takes a village to raise a child&rdquo;</em></strong></p><blockquote>
+                	<blockquote><p><strong><em>&ldquo;It takes a village to raise a child&rdquo;</em></strong></p></blockquote>
                 	<p>Parents and whanau are very much a part of this process. We want parents to view Footprints as another home away from home &ndash; a place where they can come and relax, stay as often as they like and to be involved in their child&rsquo;s exciting learning journey. We respect and acknowledge the knowledge that parents have and can contribute and we involve them as often as possible in the centre life.&nbsp;</p>
                 	<h3>Settling in</h3>
                 	<p>The settling process is where it all starts. We do not put a time limit on this and encourage parents to visit the centre as often as they like prior to starting. We believe that developing a trusting relationship with your child is the most important part of this process and understand that this takes time. During the settling process teachers will speak with parents about their child&rsquo;s needs and their aspirations for them.</p>
