--- a/index.html
+++ b/index.html
@@ -37,11 +37,13 @@ description:
             <img class="boy" src="{{ site.baseurl }}/images/blue-hat-boy-cutout.png"/>
             
             <div class="large-offset-4 large-8 cell">
-                <div class="editable lead">
-                    <h2>Our Philosophy</h2>
-                	<p>“Learning impressions, lasting for life” is the core belief that the learning and experiences that the children acquire at Footprints Preschool, will benefit them for the rest of their lives.</p>
+                <div class="blurb-content" style="relative; z-index:1000;">
+                    <div class="editable lead">
+                        <h2>Our Philosophy</h2>
+                    	<p>“Learning impressions, lasting for life” is the core belief that the learning and experiences that the children acquire at Footprints Preschool, will benefit them for the rest of their lives.</p>
+                    </div>
+                    <p><a class="editable button" href="/about#philosophy">More</a></p>
                 </div>
-                <p><a class="editable button" href="/about#philosophy">More</a></p>
             </div>
     
         </div>
