--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ description:
     
 </div>
 
-<div class="wrapper-padding padding-top-medium padding-bottom-medium">
+<div class="wrapper-padding padding-top-small padding-bottom-small">
      
      <div class="grid-container">
         <div class="grid-x grid-margin-x" style="position: relative;">
