Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@ description:
             
             <img class="boy" src="{{ site.baseurl }}/images/blue-hat-boy-cutout.png"/>
             
-            <div class="large-offset-4 large-8 cell"  style="relative; z-index:999;">
-                <div class="blurb-content">
+            <div class="large-offset-4 large-8 cell">
+                <div class="blurb-content" style="position: relative; z-index: 999;">
                     <div class="editable lead">
                         <h2>Our Philosophy</h2>
                     	<p>“Learning impressions, lasting for life” is the core belief that the learning and experiences that the children acquire at Footprints Preschool, will benefit them for the rest of their lives.</p>
