Updated 'contact.html' via CloudCannon

--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@ hero_image: /uploads/hero/hero-pirates-contact.jpg
                         </div>
                         <div class="cell">
                             <label>Your email (required)</label>
-                            <input required type="text" name="Email" />
+                            <input required type="text" name="email" />
                         </div>
                         <div class="cell">
                             <label>Phone</label>
@@ -38,10 +38,10 @@ hero_image: /uploads/hero/hero-pirates-contact.jpg
                         </div>
                        
                         <div class="cell">
-                            <input type="hidden" name="_to" value="" />
+                            <input type="hidden" name="_to" value="viv@lumina.net.nz" />
                             <!-- <input type="hidden" name="_cc" value="" /> -->
                             <input type="text" name="_gotcha" style="display: none;" />
-                            <div class="g-recaptcha" data-sitekey="6Lce6lkUAAAAADxaQH2q615vN3S14RqU5AjTPnU_"></div>
+                            <div class="g-recaptcha" data-sitekey="6LdNRYQUAAAAAHely9jcpViFzKeq_LBwUImeyJhQ"></div>
                             <input type="submit" class="button" value="Send Message" />
                         </div>
                         
