Updated 'contact.html' via CloudCannon

--- a/contact.html
+++ b/contact.html
@@ -62,7 +62,7 @@ hero_image: /uploads/hero/hero-pirates-contact.jpg
                 {% endif %}
                 
                 {% if contact.phone %}
-                    <p><i class="fas fa-phone"></i>&nbsp; {{ contact.phone }}</p>
+                    <h3><i class="fas fa-phone"></i>&nbsp; {{ contact.phone }}</h3>
                 {% endif %}
                 
                 {% if contact.facebook_url %}
