Updated 'about.html' via CloudCannon

--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@ hero_image: /uploads/hero/hero-kids-pirates.jpg
                 	</ul>
                 	<p>All three elements are to be viewed as one - neither can survive without the other. These three elements are central to the learning that children are exposed to at our centre.</p>
                 	<p>The two footprints are positioned in the shape of a heart. It represents our belief that the child is at the heart of everything that we do.</p>
-                	<p><strong><em>&ldquo;Learning impressions, lasting for life&rdquo;&nbsp;</em> </strong>is the core belief that the learning and experiences that the children acquire at Footprints Preschool, will benefit them for the rest of their lives.</p>
+                	<p><strong>&ldquo;Learning impressions, lasting for life&rdquo;&nbsp;</strong> is the core belief that the learning and experiences that the children acquire at Footprints Preschool, will benefit them for the rest of their lives.</p>
                 </div>
             </div>
             
