Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ description:
                 <div class="blurb-content">
                     <div class="editable lead">
                         <h2>Closest Preschool to Waihi Town Centre</h2>
-                    	<p>Footprints Preschool is located near the town centre of Waihi. We have a large outdoor natural environment including a sandpit, barkpit, mudpit a stream and a plum tree. The under two&rsquo;s area has a large natural grassed area with a sandpit and plenty of room for the infants and toddlers to explore and develop.</p>
+                    	<p>Footprints Preschool is located near the town centre of Waihi. We have a large outdoor natural environment including a sandpit, barkpit, mudpit, a stream and a plum tree. The under two&rsquo;s area has a large natural grassed area with a sandpit and plenty of room for the infants and toddlers to explore and develop.</p>
                     	<p>We have vegetable gardens that the children are free to access at any time. The centre also has a resident turtle and fish in the under two&rsquo;s room. The environment is well resourced with plenty of loose parts so that children can direct their play and lead their own learning.</p>
                     </div>
                     <p><a class="editable button" href="/about/">More About Us</a></p>
