Updated 'about.html' via CloudCannon

--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@ hero_image: /uploads/hero/hero-kids-pirates.jpg
             <div class="large-offset-1 large-5 cell">
                 <div class="editable">
                     <h3>Pauline Davison</h3>
-                    <p>Hi I am Pauline.<br />The development of Footprints Preschool started literally over a cup of tea and an idea on how we would love to have a centre that caters for the needs of the community. Footprints was the end result of our collective vision. I believe that children need an unhurried and supportive environment that nurtures and grows relationships. I view each child as an individual in their own right; each one with unique and different needs.</p>
+                    <p>Hi, I am Pauline.<br />The development of Footprints Preschool started literally over a cup of tea and an idea on how we would love to have a centre that caters for the needs of the community. Footprints was the end result of our collective vision. I believe that children need an unhurried and supportive environment that nurtures and grows relationships. I view each child as an individual in their own right; each one with unique and different needs.</p>
 
                 </div>
             </div>
