--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ description:
      <div class="grid-container">
         <div class="grid-x grid-margin-x" style="position: relative;">
             
-            <img class="boy" src="{{ site.baseurl }}/images/blue-hat-boy-cutout.png"/>
+            <img class="boy" src="{{ site.baseurl }}/images/blue-hat-boy-cutout.png" alt="{{ site.title }}" />
             
             <div class="large-offset-4 large-8 cell">
                 <div class="blurb-content" style="position: relative; z-index: 999;">
